<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CurrentWeatherFragment">

    <androidx.appcompat.widget.Toolbar
        app:title="@string/app_name"
        app:menu="@menu/weather_menu"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F0E1E0E0"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewWeatherIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTempMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/temp_min"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/textViewCity"
                app:layout_constraintTop_toBottomOf="@id/textViewCity" />

            <TextView
                android:id="@+id/textViewTempMinValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="$min"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewTempMin"
                app:layout_constraintStart_toEndOf="@+id/textViewTempMin"
                app:layout_constraintTop_toTopOf="@+id/textViewTempMin" />

            <TextView
                android:id="@+id/textViewTempMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/temp_max"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewTempMin"
                app:layout_constraintStart_toEndOf="@+id/textViewTempMinValue"
                app:layout_constraintTop_toTopOf="@+id/textViewTempMin" />

            <TextView
                android:id="@+id/textViewTempMaxValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="$max"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewTempMin"
                app:layout_constraintStart_toEndOf="@id/textViewTempMax"
                app:layout_constraintTop_toTopOf="@+id/textViewTempMin" />

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/city"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/textViewCountry"
                app:layout_constraintTop_toBottomOf="@id/textViewCountry" />

            <TextView
                android:id="@+id/textViewTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/temp"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@id/textViewTempMin"
                app:layout_constraintTop_toBottomOf="@id/textViewTempMin" />

            <TextView
                android:id="@+id/textViewFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/feels_Like"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/textViewTemp"
                app:layout_constraintTop_toBottomOf="@id/textViewTemp" />

            <TextView
                android:id="@+id/textViewFeelsLikeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="$feelsLikeValue"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewFeelsLike"
                app:layout_constraintStart_toEndOf="@+id/textViewFeelsLike"
                app:layout_constraintTop_toTopOf="@+id/textViewFeelsLike" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/imageViewWeatherIcon"
                app:layout_constraintStart_toStartOf="@+id/imageViewWeatherIcon"
                app:layout_constraintTop_toBottomOf="@+id/imageViewWeatherIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>